dioxus-web-component-macro/tests/assets/failures/invalid_tag_upper_case.rs
use dioxus::prelude::*;
use dioxus_web_component::web_component;

fn main() {
}

#[web_component(tag = "my-AwesomeComponent")]
fn Component(attr: String) -> Element {
    None
}
